--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,12 +1,31 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-:root{
-  --main-padding: 0 300px
+:root {
+  --main-padding: 0 300px;
 }
-a{
+a {
   color: #000;
   text-decoration: none;
+}
+.example {
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 24px;
+  border-radius: 4px;
+  margin: 10px 0;
+  & div:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+.demo {
+  padding: 15px;
+  h1 {
+    font-size: 2em;
+  }
+  p {
+    margin: 1rem 0;
+  }
 }
