--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -16,7 +16,7 @@ a {
   padding: 24px;
   border-radius: 4px;
   margin: 10px 0;
-  &> div:not(:last-child) {
+  & > div:not(:last-child) {
     margin-bottom: 20px;
   }
 }
@@ -27,5 +27,10 @@ a {
   }
   p {
     margin: 1rem 0;
+  }
+  .item {
+    & > * {
+      margin-right: 5px;
+    }
   }
 }
