--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -3,21 +3,27 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 :root {
   --main-padding: 300px;
-  @media screen and (max-width: 1920px) { 
+
+  @media screen and (max-width: 1920px) {
     --main-padding: 300px;
   }
-  @media screen and (max-width: 1700px) { 
+
+  @media screen and (max-width: 1700px) {
     --main-padding: 150px;
   }
-  @media screen and (max-width: 1300px) { 
+
+  @media screen and (max-width: 1300px) {
     --main-padding: 75px;
   }
-  @media screen and (max-width: 1100px) { 
+
+  @media screen and (max-width: 1100px) {
     --main-padding: 0;
   }
 }
+
 a {
   color: #000;
   text-decoration: none;
@@ -29,24 +35,37 @@ a {
   padding: 24px;
   border-radius: 4px;
   margin: 10px 0;
-  & > div:not(:last-child) {
+
+  &>div:not(:last-child) {
     margin-bottom: 20px;
   }
 }
+
 .demo {
   padding: 15px;
+
   h1 {
     font-size: 2em;
     margin-top: 1em;
   }
+
   h2 {
     margin-top: 1em;
   }
+
   p {
     margin: 1rem 0;
   }
+
+  .code {
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    overflow: hidden;
+    margin-bottom: 15px;
+  }
+
   .item {
-    & > * {
+    &>* {
       margin-right: 10px;
     }
   }
