--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -29,17 +29,17 @@ a {
   text-decoration: none;
 }
 
-.example {
-  width: 100%;
-  border: 1px solid #ccc;
-  padding: 24px;
-  border-radius: 4px;
-  margin: 10px 0;
+// .example {
+//   width: 100%;
+//   border: 1px solid #ccc;
+//   padding: 24px;
+//   border-radius: 4px;
+//   margin: 10px 0;
 
-  &>div:not(:last-child) {
-    margin-bottom: 20px;
-  }
-}
+//   &>div:not(:last-child) {
+//     margin-bottom: 20px;
+//   }
+// }
 
 .demo {
   padding: 15px;
