--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -22,6 +22,21 @@
   @media screen and (max-width: 1100px) {
     --main-padding: 0;
   }
+  // 美化滚动条
+  ::-webkit-scrollbar {
+    width: 20px;
+    height: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+    border: 6px solid rgba(0, 0, 0, 0);
+    box-shadow: 8px 0 0 #a5adb7 inset;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    box-shadow: 8px 0 0 #4a4a4a inset;
+  }
 }
 
 a {
@@ -30,7 +45,7 @@ a {
 }
 
 pre > code {
-  font-family: "JetBrains Mono", source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: 'JetBrains Mono', source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -64,7 +79,7 @@ pre > code {
   }
 
   .item {
-    &>* {
+    & > * {
       margin-right: 10px;
     }
   }
